fix overflow

--- a/scss/price.scss
+++ b/scss/price.scss
@@ -83,6 +83,7 @@ header{
 
 // section-plan
 #section-plan{
+    overflow: hidden;
     .container{
         position: relative;
         z-index: 2;
